fix loading progress in dark mode

--- a/app/styles/nprogress.css
+++ b/app/styles/nprogress.css
@@ -81,3 +81,14 @@
     transform: rotate(360deg);
   }
 }
+
+@media (prefers-color-scheme: dark) {
+  #nprogress .bar {
+    background: #fff;
+  }
+
+  #nprogress .spinner-icon {
+    border-top-color: #fff;
+    border-left-color: #fff;
+  }
+}
